--- a/src/main/resources/assets/halogen/lang/en_us.json
+++ b/src/main/resources/assets/halogen/lang/en_us.json
@@ -1,8 +1,6 @@
 {
 	"itemGroup.halogen": "Halogen",
 	
-	"block.halogen.node": "Node",
 	"block.halogen.large_moonlight_prism": "Grand Moonlight Prism",
-	"block.halogen.small_moonlight_prism": "Moonlight Prism",
-	"item.halogen.linking_wand": "Linking Wand"
+	"block.halogen.small_moonlight_prism": "Moonlight Prism"
 }
